# thought-brake

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: bocpd_design.md  bocpd_probe_20_report.md  experiments.md  handoff.md  idea.md  offline_detector_probe.md  plan.md  release_v0_1.md  report_v0_1.md  survey.md  technical_proposal.md  testing.md  v0_1_milestone_status.md
examples/: basic_usage.py
experiments/: analysis.py  config.py  offline_detector_probe.py  report_full_main.py  run_bocpd_probe.sh  run_token_main.sh  runner.py
experiments/data/: riddles.jsonl
experiments/datasets/: base.py  gsm8k.py  mmlu.py  riddles.py
experiments/evaluate/: exact_match.py  llm_judge.py
src/thought_brake/: __init__.py  _monitor.py  _prefill.py  _utils.py  client.py  config.py  detectors.py  types.py
tests/: conftest.py  test_client.py  test_config.py  test_detectors.py  test_exact_match.py  test_mmlu.py  test_monitor.py  test_prefill.py  test_riddles_dataset.py
